# WebServerTemplate

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: build.yml  test.yml
src/: main.rs
src/database/: postgres.rs
src/endpoint/: auth.rs  mod.rs  protected.rs  ratelimit.rs
src/model/: config.rs  database.rs  keys.rs  mod.rs
